@@ -319,6 +319,10 @@ On the below table, if "Applied" is "server parameter", that parameter affects t
 |                               +-------------------------------------+-------------------------+---------+----------+--------------------------------+-----------------------+
 |                               | java_stored_procedure               | server parameter        |         | bool     | no                             |                       |
 |                               +-------------------------------------+-------------------------+---------+----------+--------------------------------+-----------------------+
+|                               | java_stored_procedure_port          | server parameter        |         | int      | 0                              |                       |
+|                               +-------------------------------------+-------------------------+---------+----------+--------------------------------+-----------------------+
+|                               | java_stored_procedure_jvm_options   | server parameter        |         | string   |                                |                       |
+|                               +-------------------------------------+-------------------------+---------+----------+--------------------------------+-----------------------+
 |                               | multi_range_optimization_limit      | server parameter        | O       | int      | 100                            | DBA only              |
 |                               +-------------------------------------+-------------------------+---------+----------+--------------------------------+-----------------------+
 |                               | optimizer_enable_merge_join         | client parameter        | O       | bool     | no                             | available             |
@@ -1864,6 +1868,10 @@ The following are other parameters. The type and value range for each parameter 
 +-------------------------------------+--------+----------------+----------------+----------------+
 | java_stored_procedure               | bool   | no             |                |                |
 +-------------------------------------+--------+----------------+----------------+----------------+
+| java_stored_procedure_port          | int    | 0              | 0              | 65535          |
++-------------------------------------+--------+----------------+----------------+----------------+
+| java_stored_procedure_jvm_options   | string |                |                |                |
++-------------------------------------+--------+----------------+----------------+----------------+
 | multi_range_optimization_limit      | int    | 100            | 0              | 10,000         |
 +-------------------------------------+--------+----------------+----------------+----------------+
 | optimizer_enable_merge_join         | bool   | no             |                |                |
@@ -1938,6 +1946,39 @@ The following are other parameters. The type and value range for each parameter 
 **java_stored_procedure**
 
     **java_stored_procedure** is a parameter to configure whether to use Java stored procedures by running the Java Virtual Machine (JVM). If the parameter is set to **no**, which is the default value, JVM is not executed; if it is set to **yes**, JVM is executed so you can use Java stored procedures. Therefore, configure the parameter to yes if you plan to use Java stored procedures.
+
+**java_stored_procedure_port**
+
+    **java_stored_procedure_port** is a parameter to configure the port number receiving a request that calls the java stored procedures from CAS. the value must be unique and smaller than 65,535. The default value of **java_stored_procedure_port** is **0** which means the port number is automatically allocated, typically from an ephemeral port range. The value configured in this parameter affects only **java_stored_procedure** is set to **yes**. Note that an error occurs if the parameter is configured in [common]. ::
+
+        ..... 
+        [common] 
+        ..... 
+        # an error occurs. remove the following line.
+        java_stored_procedure_port=4333
+        .....
+        [@testdb]
+        .....
+        # the parameter is configured successfully for testdb
+        java_stored_procedure_port=4334
+        .....
+
+**java_stored_procedure_jvm_options**
+
+    **java_stored_procedure_jvm_options** is a parameter to configure Java Virtual Machine (JVM) and Java options on which Java stored procedures are executed. Each option string should be separated by spaces. For JVM options, there are three types of options; standard, non-standard and advanced options. non-standard and advanced options are not guaranteed to be supported on all VM implementations. The default is an empty string. If the parameter value configured in [@<database>], it overwrites the value specified in [common]. ::
+
+        ..... 
+        [common] 
+        ..... 
+        java_stored_procedure_jvm_options="-Xms1024m -Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=512m"
+        .....
+        [@testdb]
+        .....
+        java_stored_procedure=yes
+
+        # Note that -XX:PermSize=512m and -XX:MaxPermSize=512m will not be applied for testdb, Even though they specified in [common] section.
+        java_stored_procedure_jvm_options="-Xms2048m -Xmx2048m"
+        .....
 
 **multi_range_optimization_limit**
 
